--- a/.github/workflows/docker-build-debian.yml
+++ b/.github/workflows/docker-build-debian.yml
@@ -58,6 +58,12 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@master
 
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build
         uses: docker/build-push-action@v2
         with:
